# Microampermeter

./: .gitignore  README.md  Быстрый микроамперметр  Быстрый микроамперметр с диодом
h7code/: STM32H750VBTx_FLASH.ld  make_sources_config.py  makefile  microampermeter.config  microampermeter.files  microampermeter.includes  sources.mk
h7code/Core/Inc/: main.h  stm32h7xx_hal_conf.h
h7code/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
h7code/Core/Src/gui/: menu_root.c  (+36 more)
h7code/Core/display/: UTFT.c  UTFT.h  UTFT_low_level.h  float_to_string.c  float_to_string.h  utf_font.c  utf_font.h
h7code/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
kicad/ADS1271/: ADS1271-cache.lib  ADS1271.kicad_pcb  ADS1271.pro  ADS1271.sch
kicad/ad8606/: ad8606-cache.lib  ad8606.kicad_pcb  ad8606.pro  ad8606.sch  fp-info-cache
kicad/ampermeter/: ampermeter-cache.lib  ampermeter.kicad_pcb  ampermeter.sch  analog.sch
kicad/analog_frontend/: analog_frontend-cache.lib  analog_frontend-rescue.lib  analog_frontend.kicad_pcb  analog_frontend.sch  fp-info-cache  sym-lib-table
kicad/isolated_usb2uart/: analog.sch  fp-info-cache  isolated_usb2uart-cache.lib  isolated_usb2uart.kicad_pcb  isolated_usb2uart.sch  sym-lib-table
kicad/stm32h7_digital/: analog.sch  fp-info-cache  stm32h7_digital-cache.lib  stm32h7_digital.kicad_pcb  stm32h7_digital.pro  stm32h7_digital.sch  sym-lib-table
misc/3d/: battery_holder.stl  microampermeter_bottom.stl  microampermeter_top.stl
misc/images/: batery_blue.xcf
misc/test/TestCircleBuffer/: CMakeLists.txt  main.c
py/: get_data.py  view_data.py
(+75 files in other folders)
